<resources>
    <string name="app_name">ClassSelection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="loginHint">Enter a user name</string>
    <string name="loginButtonText">Login</string>
    <string name="errMessageLogin">Invalid login. Please retry.</string>
    <string name="errMessagePassword">Invalid password. Please retry.</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Phone">Phone</string>
    <string name="Day">Day</string>
    <string name="Year">Year</string>
    <string name="Date">Date of birth</string>
    <string-array name="txtGroup1">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="twoYr">Associates Degree</string>
    <string name="txtMajor">Major</string>
    <string name="txtNext">Next</string>
    <string name="cert">Certificate</string>
    <string-array name="lstCertification">
        <item>Android Certificate</item>
        <item>iOS Mobile Certificate</item>
    </string-array>
    <string-array name="lstMajor">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>
</resources>