<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <TextView
        android:id="@+id/idTextFirstName"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:layout_marginTop="11dp"
        android:text="@string/FirstName"
        app:layout_constraintEnd_toStartOf="@+id/idTextLastName"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />

    <TextView
        android:id="@+id/idTextLastName"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:layout_marginTop="19dp"
        android:text="@string/LastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <TextView
        android:id="@+id/idDateText"
        android:layout_width="89dp"
        android:layout_height="28dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="4dp"
        android:text="@string/Date"
        app:layout_constraintEnd_toStartOf="@+id/spnMonth"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <EditText
        android:id="@+id/txtDay"
        android:layout_width="39dp"
        android:layout_height="38dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@+id/spnMonth"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <Spinner
        android:id="@+id/spnMonth"
        android:layout_width="65dp"
        android:layout_height="49dp"
        android:layout_marginTop="36dp"
        android:entries="@array/txtGroup1"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayPhone" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="94dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/txtDay"
        app:layout_constraintTop_toBottomOf="@+id/idTextLastName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="88dp"
        android:text="@string/cert"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idDateText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/twoYr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYear" />

    <Switch
        android:id="@+id/swDegreeCert"
        android:layout_width="291dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:text="Switch"
        android:textOff="@string/cert"
        android:textOn="@string/twoYr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDay"
        tools:checked="true" />

    <Spinner
        android:id="@+id/spnCertificate"
        android:layout_width="144dp"
        android:layout_height="22dp"
        android:layout_marginTop="44dp"
        android:entries="@array/lstCertification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <Spinner
        android:id="@+id/spnDegree"
        android:layout_width="197dp"
        android:layout_height="19dp"
        android:layout_marginTop="46dp"
        android:entries="@array/lstMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spnCertificate"
        app:layout_constraintTop_toBottomOf="@+id/swDegreeCert" />

    <TextView
        android:id="@+id/lblCertificate"
        android:layout_width="137dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/txtMajor"
        app:layout_constraintBottom_toTopOf="@+id/spnCertificate"
        app:layout_constraintEnd_toStartOf="@+id/lblDegree"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblDegree"
        android:layout_width="145dp"
        android:layout_height="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/twoYr"
        app:layout_constraintBottom_toTopOf="@+id/spnDegree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/txtNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDegree" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idTextFirstName" />

    <TextView
        android:id="@+id/displayPhone"
        android:layout_width="180dp"
        android:layout_height="19dp"
        android:layout_marginTop="4dp"
        android:text="@string/Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="176dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="179dp"
        android:layout_height="47dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtFirstName"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>